# geosim

./: CMakeLists.txt  README.md  camera.cpp
DATA/: pentlands.tif
include/: buffer.h  camera.h  camera.hpp  gbuffer.h  gishandler.h  renderable.h  renderer.h  shader.h
shaders/: terrain.frag  terrain.vert
src/: camera.cpp  framerenderer.cpp  gishandler.cpp  main.cpp  terrain.cpp
